--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,16 +1,248 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Консул</title>
 	<link rel="stylesheet" href="/css/main.css">
+
+	<style>
+
+		.header {
+			display: block;
+			width: 100%;
+			background-color: #bebebe;
+		}
+
+		.container {
+			display: block;
+			width: 80%;
+			margin: 0 auto;
+		}
+
+		.header_content {
+			display: flex;
+			justify-content: space-between;
+			padding: 10px 0;
+		}
+
+		.header_content_logo, .header_content_address, .header_content_phone {
+			display: flex;
+			gap: 10px;
+		}
+
+		.header_content_logo img {
+			width: 50px;
+		}
+
+		.header_content_logo_desc {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.header_content_logo_desc p:first-child {
+			font-size: 22px;
+			color: #5f0614;
+		}
+
+		.header_content_logo_desc p:last-child {
+			font-size: 18px;
+			font-weight: 600;
+			color: #000000;
+			text-decoration: none;
+			transition: .5s;
+			cursor: pointer;
+		}
+
+		.header_content_logo_desc p:last-child:hover {
+			color: #5f0614;
+		}
+
+		.header_content_phone_desc {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.header_content_phone_desc p {
+			font-size: 22px;
+			color: #5f0614;
+		}
+
+		.header_content_phone_desc a {
+			font-size: 18px;
+			font-weight: 600;
+			color: #000000;
+			text-decoration: none;
+			transition: .5s;
+		}
+
+		.header_content_phone_desc a:hover {
+			color: #5f0614;
+		}
+
+		.header_content_address_text p {
+			font-size: 22px;
+			color: #5f0614;
+		}
+
+		.header_content_address_text a {
+			font-size: 18px;
+			font-weight: 600;
+			color: #000000;
+			text-decoration: none;
+			transition: .5s;
+		}
+
+		.header_content_address_text a:hover {
+			color: #5f0614;
+		}
+
+		.header_content_button {
+			padding: 5px 13px;
+			cursor: pointer;
+			height: 50px;
+			width: 155px;
+			color: #fff;
+			border: 1px solid #5f0614;
+			border-radius: 5px;
+			background-color: #5f0614;
+			font-size: 16px;
+			margin-top: 12px;
+			transition: .5s;
+		}
+
+		.header_content_button:hover {
+			background-color: #97182c;
+			border-color: #97182c;
+		}
+
+		.header_content_address_text {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.header_content_address_text img {
+			width: 50px;
+			height: 50px;
+		}
+
+		.header_menu {
+			width: 100%;
+			background-color: #5f0614;
+		}
+
+		.header_menu_data {
+			display: flex;
+			justify-content: space-between;
+			flex-wrap: wrap;
+			height: 60px;
+			align-items: center;
+		}
+
+		.header_menu_data a {
+			font-size: 16px;
+			text-transform: uppercase;
+			text-decoration: none;
+			color: #FFFFFF;
+			padding: 20.2px;
+			transition: .5s;
+		}
+
+		.header_menu_data a:hover {
+			background-color: #97182c;
+		}
+
+
+		/*-------media--------*/
+
+		@media(max-width: 1420px) {
+			.container {
+				width: 90%;
+			}
+		}
+
+		@media(max-width: 1130px) {
+			.header_content {
+				flex-wrap: wrap;
+				justify-content: start;
+			}
+		}
+
+		@media(max-width: 1090px) {
+			.header_content div:not(:first-child), button {
+				margin-top: 20px;
+			}
+
+			.header_content {
+				flex-direction: column;
+			}
+
+			.header_content_logo, .header_content_address, .header_content_phone {
+				align-items: baseline;
+			}
+		}
+
+		@media(max-width: 915px) {
+
+			.header_content_address {
+				align-items: baseline;
+			}
+
+			.header_content_logo {
+				gap: 10px;
+				align-items: baseline;
+			}
+
+			.header_content_logo img {
+				width: 25px;
+			}
+
+			.header_content_button {
+				margin: 20px 0 0 33px;
+
+			}
+		}
+	</style>
 </head>
 <body>
-<div class="app">
-	Консул
-</div>
+<header class="header">
+	<div class="header_content container">
+		<div class="header_content_logo">
+			<img src="/img/logo-image.png" alt="logo">
+			<div class="header_content_logo_desc">
+				<p>Консул</p>
+				<p>Юридическая компания</p>
+			</div>
+		</div>
+		<div class="header_content_phone">
+			<div class="header_content_phone_logo">
+				<img src="/img/phone-image.svg" alt="phone">
+			</div>
+			<div class="header_content_phone_desc">
+				<p>Телефон для связи</p>
+				<a href="tel:+79187347481">+7 (918) 734-74-81</a>
+			</div>
+		</div>
+		<div class="header_content_address">
+			<img src="/img/address-image.svg" alt="address">
+			<div class="header_content_address_text">
+				<p>Адрес</p>
+				<a href="#">
+					г. Москва , Киевское ш. 22 км, влад. 4,<br> с. 2  Бизнес парк "Румянцево"
+				</a>
+			</div>
+		</div>
+		<button class="header_content_button">Заказать звонок</button>
+	</div>
+	<div class="header_menu">
+		<div class="header_menu_data container">
+			<a href="#">Главная</a>
+			<a href="#">Общегражданские дела</a>
+			<a href="#">Арбитраж</a>
+			<a href="#">Контакты</a>
+		</div>
+	</div>
+</header>
 </body>
 </html>
