--- a/src/html/header/header.html
+++ b/src/html/header/header.html
@@ -201,6 +201,7 @@
         .header_menu_data {
             flex-direction: column;
             align-items: start;
+            margin-left: 42px;
         }
 
         .header_menu_data a {
@@ -232,7 +233,7 @@
             <div class="header_content_address_text">
                 <p>Адрес</p>
                 <a href="#">
-                    г. Москва , Киевское ш. 22 км, влад. 4,<br> с. 2  Бизнес парк "Румянцево"
+                    г. Москва , Киевское ш. 22 км, влад. 4, с. 2 <br> Бизнес парк "Румянцево"
                 </a>
             </div>
         </div>
