--- a/src/html/header/header.html
+++ b/src/html/header/header.html
@@ -134,7 +134,7 @@
         text-transform: uppercase;
         text-decoration: none;
         color: #FFFFFF;
-        padding: 20.2px;
+        padding: 20px 0;
         transition: .5s;
     }
 
@@ -160,7 +160,7 @@
 
     @media(max-width: 1090px) {
         .header_content div:not(:first-child), button {
-            margin-top: 20px;
+            margin-top: 10px;
         }
 
         .header_content_logo img {
@@ -201,7 +201,7 @@
         .header_menu_data {
             flex-direction: column;
             align-items: start;
-            margin-left: 42px;
+            padding-left: 24px;
         }
 
         .header_menu_data a {
