--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-@@include("header/header.html")
+<div>
+	@@include("header/header.html")
+	@@include("companyDescription/companyDescription.html")
+
+</div>
 </body>
 </html>
