--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
 <div>
 	@@include("header/header.html")
 	@@include("companyDescription/companyDescription.html")
+	@@include("servicesBlock/servicesBlock.html")
 
 </div>
 </body>
