company desc end

--- a/src/html/companyDescription/companyDescription.html
+++ b/src/html/companyDescription/companyDescription.html
@@ -14,11 +14,14 @@
 
     .companyDescription__desc h1 {
         font-size: 45px;
+        color: white;
     }
 
     .companyDescription__desc p {
         font-size: 30px;
         margin-top: 20px;
+        text-align: center;
+        color: white;
     }
 </style>
 
