--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
 	@@include("header/header.html")
 	@@include("companyDescription/companyDescription.html")
 	@@include("servicesBlock/servicesBlock.html")
-
+	@@include("companyDesc/companyDesc.html")
 </div>
 </body>
 </html>
