--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@
 	@@include("header/header.html")
 	@@include("companyDescription/companyDescription.html")
 	@@include("servicesBlock/servicesBlock.html")
+	@@include("questions/questions.html")
 	@@include("companyDesc/companyDesc.html")
 </div>
 </body>
