--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,6 +14,7 @@
 	@@include("servicesBlock/servicesBlock.html")
 	@@include("questions/questions.html")
 	@@include("companyDesc/companyDesc.html")
+	@@include("consultation/consultation.html")
 </div>
 </body>
 </html>
