--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -15,6 +15,7 @@
         font-weight: 500;
         font-family: auto;
         color: #FFFFFF;
+        text-align: center;
     }
 
     .consultation__form {
@@ -28,7 +29,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        max-width: 600px;
+        max-width: 636px;
         width: 100%;
     }
 
@@ -49,7 +50,7 @@
         width: 100%;
     }
 
-    .consultation__form_inputs button {
+    .consultation__form_button {
         transition: .5s;
         text-align: center;
         color: #fff;
@@ -59,7 +60,7 @@
         cursor: pointer;
     }
 
-    .consultation__form_inputs button:hover {
+    .consultation__form_button:hover {
         background-color: #a3051e;
     }
 
@@ -69,6 +70,34 @@
         font-size: 18px;
         outline:none;
     }
+
+    .mobil {
+        display: none;
+    }
+
+    .consultation__form button {
+        margin-top: 0;
+    }
+
+    /*----------media------------*/
+
+    @media(max-width: 700px) {
+        .consultation__form {
+            flex-direction: column;
+        }
+
+        .mobil {
+            display: block;
+        }
+
+        .desktop {
+            display: none;
+        }
+
+        .consultation__form {
+            gap: 10px;
+        }
+    }
 </style>
 
 <div class="consultation">
@@ -77,8 +106,9 @@
         <div class="consultation__form_inputs">
             <input type="text" placeholder="Ваше имя">
             <input type="number" placeholder="Ваш телефон">
-            <button>отправить</button>
+            <button class="consultation__form_button desktop">отправить</button>
         </div>
         <input class="consultation__form_desc" type="text" placeholder="Ваше сообщение">
+        <button class="consultation__form_button mobil">отправить</button>
     </div>
 </div>
