--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -97,6 +97,10 @@
         .consultation__form {
             gap: 10px;
         }
+
+        .consultation__title {
+            font-size: 35px;
+        }
     }
 </style>
 
