--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,7 @@
 	@@include("questions/questions.html")
 	@@include("companyDesc/companyDesc.html")
 	@@include("consultation/consultation.html")
+	@@include("footer/footer.html")
 </div>
 </body>
 </html>
