--- a/src/html/footer/footer.html
+++ b/src/html/footer/footer.html
@@ -5,5 +5,7 @@
 </style>
 
 <div class="footer">
-
+    <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14..." width="1600" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
 </div>
