--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -22,7 +22,7 @@
         display: flex;
         justify-content: center;
         gap: 40px;
-        margin-top: 20px;
+        margin: 20px 0;
     }
 
     .consultation__form_inputs {
