--- a/src/html/footer/footer.html
+++ b/src/html/footer/footer.html
@@ -2,10 +2,46 @@
     .footer {
 
     }
+
+    .footer__list {
+        width: 100%;
+        background-color: #2b272c;
+    }
+
+    .footer__list_desc {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0;
+    }
+
+    .footer__list_desc p {
+        color: #838383;
+        font-size: 12px;
+    }
+
+    /*--------media----------*/
+
+    @media(max-width: 700px) {
+        .footer__list_desc {
+            flex-direction: column;
+            align-items: start;
+            gap: 10px;
+        }
+
+        .br {
+            display: none;
+        }
+    }
 </style>
 
 <div class="footer">
-    <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14..." width="1600" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2252.056776757215!2d37.433361976356984!3d55.63582640099557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b55289d4fa639f%3A0xcaf392ca401cb288!2z0JHQuNC30L3QtdGBLdC_0LDRgNC6INCg0YPQvNGP0L3RhtC10LLQvg!5e0!3m2!1sru!2sru!4v1685105196363!5m2!1sru!2sru" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="footer__list">
+        <div class="footer__list_desc container">
+            <p>Сайт защищен reCAPTCHA и Google. <br class="br"> Конфиденциальность и Условия.</p>
+            <p>Публичная оферта <br class="br"> Политика конфиденциальности</p>
+            <p>Подпишитесь на <br class="br"> исследования и кейсы</p>
+        </div>
     </div>
 </div>
