--- a/src/html/servicesBlock/servicesBlock.html
+++ b/src/html/servicesBlock/servicesBlock.html
@@ -3,7 +3,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0 20px;
     }
 
     .servicesBlock__title {
@@ -107,13 +106,10 @@
     }
 
     @media(max-width: 400px) {
-        .servicesBlock__item {
+       /* .servicesBlock__item {
             max-width: 300px;
-        }
-
-        .servicesBlock__item {
             min-height: 400px;
-        }
+        }*/
 
         .servicesBlock__item img {
             height: 160px;
@@ -138,7 +134,7 @@
 </style>
 
 <div class="servicesBlock container">
-    <h1 class="servicesBlock__title">Оказываемые услуги</h1>
+    <h1 class="servicesBlock__title">Оказываемые услуги2222222222</h1>
     <div class="servicesBlock__items">
         <div class="servicesBlock__item">
             <img src="/img/servicesBlock-image-1.jpg" alt="servicesBlock">
