--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -8,6 +8,7 @@
         align-items: center;
         justify-content: center;
         margin-top: 50px;
+        padding: 20px 0;
     }
 
     .consultation__title {
