--- a/src/html/servicesBlock/servicesBlock.html
+++ b/src/html/servicesBlock/servicesBlock.html
@@ -134,7 +134,7 @@
 </style>
 
 <div class="servicesBlock container">
-    <h1 class="servicesBlock__title">Оказываемые услуги2222222222</h1>
+    <h1 class="servicesBlock__title">Оказываемые услуги</h1>
     <div class="servicesBlock__items">
         <div class="servicesBlock__item">
             <img src="/img/servicesBlock-image-1.jpg" alt="servicesBlock">
