--- a/src/html/companyDescription/companyDescription.html
+++ b/src/html/companyDescription/companyDescription.html
@@ -23,6 +23,18 @@
         text-align: center;
         color: white;
     }
+
+    /*----------media------------*/
+
+    @media(max-width: 500px) {
+        .companyDescription__desc p {
+            font-size: 25px;
+        }
+
+        .companyDescription__desc h1 {
+            font-size: 40px;
+        }
+    }
 </style>
 
 <div class="companyDescription">
