--- a/src/html/header/header.html
+++ b/src/html/header/header.html
@@ -170,15 +170,6 @@
     }
 
     @media(max-width: 915px) {
-
-        .header_content_address {
-            align-items: baseline;
-        }
-
-        .header_content_logo {
-            align-items: baseline;
-        }
-
         .header_content_address_text a, .header_content_phone_desc a, .header_content_logo_desc p:last-child {
             font-size: 16px;
         }
@@ -186,14 +177,89 @@
 
     @media(max-width: 710px) {
         .header_menu_data {
-            flex-direction: column;
-            align-items: start;
+            display: none;
         }
 
         .header_menu_data a {
             padding: 10px;
             margin-left: -10px;
         }
+
+        nav {
+            display: block!important;
+        }
+    }
+
+
+
+
+
+
+    .nav {
+        position: absolute;
+        top: 15px;
+        right: 0;
+        transform: translateX(-50%);
+        display: inline-block;
+        animation: slide-in 1s ease-out;
+        display: none;
+    }
+
+    ul {
+        position: relative;
+        display: flex;
+        flex: 1 1 auto;
+        margin: 0;
+        list-style-type: none;
+    }
+
+    ul li a {
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        transition: color 0.2s;
+    }
+    ul li ul {
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        display: block;
+        margin: 5px -166px;
+        padding: 0;
+        transition: opacity 0.2s, visibility 0.2s;
+        text-align: end;
+    }
+
+    .a {
+        text-decoration: none;
+
+    }
+
+    ul li:hover ul {
+        visibility: visible;
+        opacity: 1;
+    }
+
+
+    @keyframes slide-in {
+        0% {
+            top: -50px;
+        }
+        40% {
+            top: 20px;
+        }
+        70% {
+            top: 10px;
+        }
+        100% {
+            top: 15px;
+        }
+    }
+
+    .line {
+        height: 2px;
+        width: 25px;
+        background-color: #5f0614;
     }
 </style>
 
@@ -205,6 +271,23 @@
                 <p>Консул</p>
                 <p>Юридическая компания</p>
             </div>
+            <nav class="nav">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span class="line"></span>
+                            <span class="line"></span>
+                            <span class="line"></span>
+                        </a>
+                        <ul class="ul">
+                            <li><a class="a" href="#">Главная</a></li>
+                            <li><a class="a" href="#">Общегражданские дела</a></li>
+                            <li><a class="a" href="#">Арбитраж</a></li>
+                            <li><a class="a" href="#">Контакты</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="header_content_phone">
             <div class="header_content_phone_logo">
