--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -109,11 +109,15 @@
     <h1 class="consultation__title">Заказать консультацию</h1>
     <div class="consultation__form container">
         <div class="consultation__form_inputs">
-            <input type="text" placeholder="Ваше имя">
-            <input type="number" placeholder="Ваш телефон">
+            <input class="consultation__form_name" name="name" type="text" placeholder="Ваше имя">
+            <input class="consultation__form_phone" name="phone" type="number" placeholder="Ваш телефон">
             <button class="consultation__form_button desktop">отправить</button>
         </div>
-        <input class="consultation__form_desc" type="text" placeholder="Ваше сообщение">
+        <input class="consultation__form_desc" name="message" type="text" placeholder="Ваше сообщение">
         <button class="consultation__form_button mobil">отправить</button>
     </div>
 </div>
+
+<script>
+        const a =
+</script>
