--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -109,7 +109,7 @@
     <h1 class="consultation__title">Заказать консультацию</h1>
     <div class="consultation__form container">
         <div class="consultation__form_inputs">
-            <input id="divA" class="consultation__form_name" name="name" type="text" placeholder="Ваше имя">
+            <input class="consultation__form_name" name="name" type="text" placeholder="Ваше имя">
             <input class="consultation__form_phone" name="phone" type="number" placeholder="Ваш телефон">
             <button class="consultation__form_button desktop">отправить</button>
         </div>
@@ -118,7 +118,6 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
     document.querySelector('.consultation__form_button').onclick = bor;
