--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -151,16 +151,16 @@
                 .finally(() =>{
                     console.log('ok')
                 })
-            /*document.querySelector('.consultation__form_name').value = '';
+            document.querySelector('.consultation__form_name').value = '';
             document.querySelector('.consultation__form_phone').value = '';
-            document.querySelector('.consultation__form_desc').value = '';*/
+            document.querySelector('.consultation__form_desc').value = '';
             document.querySelector('.consultation__form_name').classList.remove("error");
             document.querySelector('.consultation__form_phone').classList.remove("error");
         } else {
             name ? document.querySelector('.consultation__form_name').classList.remove("error")
                 : document.querySelector('.consultation__form_name').classList.add("error");
             phone ?  document.querySelector('.consultation__form_phone').classList.remove("error")
-                : document.querySelector('.consultation__form_phone').classList.add("error");;
+                : document.querySelector('.consultation__form_phone').classList.add("error");
         }
     }
 </script>
