--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -14,7 +14,7 @@
     .consultation__title {
         font-size: 40px;
         font-weight: 500;
-        font-family: auto;
+        font-family: emoji;
         color: #FFFFFF;
         text-align: center;
     }
@@ -113,11 +113,17 @@
     <h1 class="consultation__title">Заказать консультацию</h1>
     <div class="consultation__form container">
         <div class="consultation__form_inputs">
-            <input class="consultation__form_name" name="name" type="text" placeholder="Ваше имя">
-            <input  class="consultation__form_phone" name="phone" type="number"  placeholder="+7 (___) ___-__-__">
+            <label>
+                <input class="consultation__form_name" name="name" type="text" placeholder="Ваше имя">
+            </label>
+            <label>
+                <input  class="consultation__form_phone" name="phone" type="number"  placeholder="+7 (___) ___-__-__">
+            </label>
             <button class="consultation__form_button desktop">отправить</button>
         </div>
-        <input class="consultation__form_desc" name="message" type="text" placeholder="Ваше сообщение">
+        <label>
+            <input class="consultation__form_desc" name="message" type="text" placeholder="Ваше сообщение">
+        </label>
         <button class="consultation__form_button mobil">отправить</button>
     </div>
 </div>
@@ -140,16 +146,16 @@
             axios.post('https://api.telegram.org/bot6127491380:AAETysDdd5qODNPMDmKTVV-vSefc1Kj1imw/sendMessage', {
                 chat_id: '-1001669814655',
                 text: message,
-                parse_mode: 'html'
+                parse_mode: 'html',
             })
                 .then((res) =>{
-                    alert('Заявка отправлена')
+                    alert('Заявка отправлена');
                 })
                 .catch((err) => {
-                    console.log('error')
+                    console.log('error');
                 })
                 .finally(() =>{
-                    console.log('ok')
+                    console.log('ok');
                 })
             document.querySelector('.consultation__form_name').value = '';
             document.querySelector('.consultation__form_phone').value = '';
@@ -164,8 +170,8 @@
         }
     }
 
-    let btn = document.querySelector('.header_content_button')
-    let consultation = document.querySelector('.consultation')
+    let btn = document.querySelector('.header_content_button');
+    let consultation = document.querySelector('.consultation');
 
     function handleButtonClick() {
         consultation.scrollIntoView({block: "center", behavior: "smooth"});
