--- a/src/html/consultation/consultation.html
+++ b/src/html/consultation/consultation.html
@@ -164,14 +164,14 @@
             /*document.querySelector('.consultation__form_name').value = '';
             document.querySelector('.consultation__form_phone').value = '';
             document.querySelector('.consultation__form_desc').value = '';*/
-            document.querySelector('.consultation__form_name').classList.remove("error");
-            document.querySelector('.consultation__form_phone').classList.remove("error");
-        } else {
+            /*document.querySelector('.consultation__form_name').classList.remove("error");
+            document.querySelector('.consultation__form_phone').classList.remove("error");*/
+        } /*else {
             name ? document.querySelector('.consultation__form_name').classList.remove("error")
                 : document.querySelector('.consultation__form_name').classList.add("error");
             phone ?  document.querySelector('.consultation__form_phone').classList.remove("error")
                 : document.querySelector('.consultation__form_phone').classList.add("error");
-        }
+        }*/
     }
 
     let btn = document.querySelector('.header_content_button');
